--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
     "tasks": [{
         "taskName": "Run",
         "type": "shell",
-        "command": "nf run nodemon index.js",
+        "command": "nf run nodemon ./src/index.js",
         "group": {
             "kind": "build",
             "isDefault": true
