--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "aresdiscordbot",
     "version": "1.0.0",
     "description": "discord bot",
-    "main": "index.js",
+    "main": "./src/index.js",
     "engines": {
         "node": "latest",
         "npm": "latest"
